# gtplay

./: CMakeLists.txt
src/: gplayer.cpp  gplayer.hpp  main.cpp
